<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.firebasetmit.addPages.AddActivity">

    <EditText
        android:id="@+id/placeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/closingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_time"
        android:inputType="text" />

    <EditText
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/activity_type"
        android:inputType="text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/nameList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_of_people"
        android:inputType="text"
        tools:ignore="TextFields" />


    <EditText
        android:id="@+id/locationLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text" />

    <EditText
        android:id="@+id/locationLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:inputType="text" />

    <EditText
        android:id="@+id/prio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priority"
        android:inputType="text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveNote"
        android:text="@string/save" />

</LinearLayout>